Add guided person camera calibration
